Added helper class to extract out XmlNodeReader construction

--- a/src/System.Private.Xml/tests/XmlNodeReader/System.Xml.XmlNodeReader.Tests/System.Xml.XmlNodeReader.Tests.csproj
+++ b/src/System.Private.Xml/tests/XmlNodeReader/System.Xml.XmlNodeReader.Tests/System.Xml.XmlNodeReader.Tests.csproj
@@ -6,6 +6,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netstandard-Release|AnyCPU'" />
   <ItemGroup>
+    <Compile Include="NodeReaderTestHelper.cs" />
     <Compile Include="XmlNodeReaderConstructionTests.cs" />
     <Compile Include="XmlNodeReaderGetAttributeTests.cs" />
     <Compile Include="XmlNodeReaderMiscTests.cs" />
