Tweaks / minor fixes

--- a/src/Microsoft.Internal.IO/src/Configurations.props
+++ b/src/Microsoft.Internal.IO/src/Configurations.props
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <BuildConfigurations>
       net461-Windows_NT;
+      netfx-Windows_NT;
+      netstandard2.0-Windows_NT;
       netcoreapp2.0-Windows_NT;
+      netcoreapp-Windows_NT;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
