--- a/src/Microsoft.Internal.IO/src/Microsoft.Internal.IO.csproj
+++ b/src/Microsoft.Internal.IO/src/Microsoft.Internal.IO.csproj
@@ -4,10 +4,11 @@
     <AssemblyName>Microsoft.Internal.IO</AssemblyName>
     <IsPartialFacadeAssembly>false</IsPartialFacadeAssembly>
     <ProjectGuid>{FEF5811F-ED50-4407-A6B9-885EBD3206FB}</ProjectGuid>
-    <Configurations>net461-Windows_NT-Debug;net461-Windows_NT-Release;netcoreapp2.0-Windows_NT-Debug;netcoreapp2.0-Windows_NT-Release</Configurations>
+    <Configurations>net461-Windows_NT-Debug;net461-Windows_NT-Release;netcoreapp2.0-Windows_NT-Debug;netcoreapp2.0-Windows_NT-Release;netcoreapp2.1-Windows_NT-Debug;netcoreapp2.1-Windows_NT-Release;netstandard1.3-Windows_NT-Debug;netstandard1.3-Windows_NT-Release</Configurations>
     <DefineConstants>$(DefineConstants);MS_INTERNAL_IO</DefineConstants>
     <LangVersion>7.3</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <ClsCompliant>false</ClsCompliant>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\..\System.IO.FileSystem\src\Microsoft\Win32\SafeHandles\SafeFindHandle.Windows.cs" Link="Microsoft\Internal\Win32\SafeHandles\SafeFindHandle.Windows.cs" />
@@ -225,6 +226,8 @@
     <Reference Include="System.Core" />
     <Reference Include="System.ValueTuple" />
   </ItemGroup>
+  <ItemGroup Condition="'$(TargetsNetFx)' == 'true' or '$(TargetsNetStandard)' == 'true'">
+  </ItemGroup>
   <ItemGroup Condition="'$(TargetsNetFx)' != 'true'">
     <Reference Include="System.Collections" />
     <Reference Include="System.Diagnostics.Debug" />
@@ -238,6 +241,7 @@
     <Reference Include="System.Threading.Overlapped" />
     <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Threading" />
+    <Reference Include="System.IO.FileSystem" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Buffers" />
