Partial cleanup of `Internal.Cryptography.Helpers`.
At the moment, each of the `System.Security.Cryptography.*` projects defines its own
`Internal.Cryptography.Helpers` and several of them contain identical helper methods
such as for instance `CloneByteArray()`.

This causes problems for Mono when we're trying to combine pieces from multiple of these
projects into our assemblies.

This is a partial cleanup, which adds a `partial` modifier to all these classes and
moves the `CloneByteArray()` into a new shared file.

--- a/src/System.Security.Cryptography.Encoding/src/System.Security.Cryptography.Encoding.csproj
+++ b/src/System.Security.Cryptography.Encoding/src/System.Security.Cryptography.Encoding.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Internal\Cryptography\AsnFormatter.cs" />
-    <Compile Include="Internal\Cryptography\Helpers.cs" />
     <Compile Include="Internal\Cryptography\OidLookup.cs" />
     <Compile Include="System\Security\Cryptography\AsnEncodedData.cs" />
     <Compile Include="System\Security\Cryptography\AsnEncodedDataCollection.cs" />
@@ -17,6 +16,9 @@
     <Compile Include="System\Security\Cryptography\OidCollection.cs" />
     <Compile Include="System\Security\Cryptography\OidEnumerator.cs" />
     <Compile Include="System\Security\Cryptography\OidGroup.cs" />
+    <Compile Include="$(CommonPath)\Internal\Cryptography\Helpers.cs">
+      <Link>Internal\Cryptography\Helpers.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetsWindows)' == 'true'">
     <Compile Include="Internal\Cryptography\AsnFormatter.Windows.cs" />
