--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -9,6 +9,7 @@
     <!-- Disable code paths that require project.assets.json files to be present or to be computed. -->
     <GenerateDependencyFile>false</GenerateDependencyFile>
     <ComputeNETCoreBuildOutputFiles>false</ComputeNETCoreBuildOutputFiles>
+    <GenerateRuntimeConfigurationFiles>false</GenerateRuntimeConfigurationFiles>
 
     <!--
       The Microsoft.NET.Sdk defaults the AssemblySearchPaths earlier than buildtools, so default
