--- a/src/System.Runtime/tests/TestLoadAssembly/TestLoadAssembly.csproj
+++ b/src/System.Runtime/tests/TestLoadAssembly/TestLoadAssembly.csproj
@@ -6,6 +6,7 @@
     <Configurations>netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ClassesSample.cs" />
     <Compile Include="TestLoadAssembly.cs" />
   </ItemGroup>
 </Project>
