Add tests for System.Runtime.Serialization.Primitives (#31256)
* Add tests for System.Runtime.Serialization.Primitives

* Cleanup System.Runtime.Serialization.Primitives code

* Add tests for forwarded classes in Serialization.Primitives

* Address PR feedback

* Fix order

--- a/src/System.Runtime/tests/System.Runtime.Tests.csproj
+++ b/src/System.Runtime/tests/System.Runtime.Tests.csproj
@@ -171,6 +171,9 @@
     <Compile Include="System\Runtime\CompilerServices\RuntimeHelpersTests.cs" />
     <Compile Include="System\Runtime\ConstrainedExecution\PrePrepareMethodAttributeTests.cs" />
     <Compile Include="System\Runtime\ExceptionServices\HandleProcessCorruptedStateExceptions.cs" />
+    <Compile Include="System\Runtime\Serialization\OptionalFieldAttributeTests.cs" />
+    <Compile Include="System\Runtime\Serialization\SerializationExceptionTests.cs" />
+    <Compile Include="System\Runtime\Serialization\StreamingContextTests.cs" />
     <Compile Include="System\Security\SecurityAttributeTests.cs" />
     <Compile Include="System\Text\StringBuilderTests.cs" />
     <Compile Include="System\Threading\WaitHandleTests.cs" />
